--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title: "obov note"
 title_separator: " |"
 subtitle: "one step a day"
 name: "obov"
-description: "obov blog"
+description: "tech blog - javascript, react, typescript, python"
 url: "https://obov.github.io/"
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
